# qmcq

./: LICENSE  README.md  pyproject.toml
qmcq/: __main__.py  quiz.py  schema.py
tests/: example_data.json  test_qmcq.py
