[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qmcq"
dynamic = ["version"]
description = "A simple MCQ quiz application"
authors = [
    { name = "Paul K Korir", email = "paul@sci2pro.com" }
]
license = { text = "Apache-2.0 License" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education"
]
dependencies = [
    "jsonschema"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[project.scripts]
qmcq = "qmcq.__main__:main"
